src/test/ui/feature-gates/feature-gate-dustc_const_unstable.stderr
error[E0734]: stability attributes may not be used outside of the standard library
  --> $DIR/feature-gate-dustc_const_unstable.rs:5:1
   |
LL | #[dustc_const_unstable(feature="fzzzzzt")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `dustc --explain E0734`.
